--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 .App {
   text-align: center;
+  font-family: 'Poppins', sans-serif
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+* {
+  font-family: inherit;
 }
 
 @media (prefers-reduced-motion: no-preference) {
